Fixed issue with picklist being behind modal

--- a/force-app/main/default/lwc/picklist/picklist.css
+++ b/force-app/main/default/lwc/picklist/picklist.css
@@ -45,4 +45,5 @@
 }
 .slds-dropdown{
 	transform: none !important;
+	z-index: 10000 !important;
 }
